po: update po/uk_UA/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/uk_UA/menu.po
+++ b/po/uk_UA/menu.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -129,8 +129,8 @@ msgid "Case Activity"
 msgstr "Діяльність у справі"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Звіт про справу"
+msgid "Case Activity Audit"
+msgstr "Аудит діяльності справи"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -149,8 +149,8 @@ msgid "Assign to Another Client"
 msgstr "Доручити іншому клієнту"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Створити діяльність у кореляції до справи"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -174,10 +174,6 @@ msgstr "Статуси справ"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Засоби комунікації"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Змінити статус діяльності"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -252,6 +248,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Фінансові типи"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Новий платіж"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -269,9 +269,15 @@ msgstr "Прийняті платіжні картки"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Типи пільгових кредитів"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Внески"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Повторні внески"
@@ -322,6 +328,23 @@ msgstr "Пакетні фінансові операції"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Експорт пакетної фінансової операції"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Переглянути платіж"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Налаштування компонентів CiviВнески"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Рахунок - PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Рахунок - Е-мейл"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -475,6 +498,11 @@ msgstr "Налаштування пошуку"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Переваги по даті"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Меню навігації"
 
@@ -508,10 +536,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Запланувати нагадування"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Це ніколи не повинно продивлятися"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -529,6 +553,11 @@ msgstr "Формат сторінок для друку (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Опції Стиля комунікацій"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Формат привітання в електронному листі"
 
@@ -542,9 +571,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Формати адрес"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Мови, Валюта, Місцезнаходження"
+msgid "Languages, Currency, Locations"
+msgstr "Мови, валюта, локації"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -695,10 +725,6 @@ msgid "Administer CiviCRM"
 msgstr "Адміністрування CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Опції значень"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Профілі цін"
 
@@ -766,10 +792,6 @@ msgstr "Пошуковий конструктор"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Індивідуально налаштований пошук"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Звичайний пошук"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -861,6 +883,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM Блог"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Модуль \"Справи\""
 
@@ -915,6 +941,10 @@ msgid "Import Activities"
 msgstr "Імпортувати діяльність"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Імпортувати індивідуальну інформацію з мульти-значеннями"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Оновити CiviCRM"
 
@@ -951,12 +981,16 @@ msgid "Browse Uploaded files"
 msgstr "Переглянути завантажені файли"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "Видалити файл"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Вийти"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -970,6 +1004,10 @@ msgstr "QОдиниця"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Редактор профілю"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Підтвердити дати"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1066,6 +1104,10 @@ msgid "Event Online Registration"
 msgstr "Он-лайн реєстрація на подію"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Повторити Подію"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Слоти конференцій"
 
@@ -1099,6 +1141,10 @@ msgstr "Видалити з кошику"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Переглянути кошик"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Змінити вибір реєстрації"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1153,8 +1199,8 @@ msgid "Resubscribe"
 msgstr "Перепідписатися"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Відписатися від непотрібної інформації"
+msgid "Opt-out"
+msgstr "Відписатися"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1289,6 +1335,11 @@ msgstr "Список звітів"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "CiviCRM Новини"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1427,6 +1478,16 @@ msgstr "Знайти СМС-розсилки"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Новий тест А/В"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Керування А/В тестами"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Звіти по членству"
 
@@ -1532,11 +1593,6 @@ msgstr "Локалізація"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Мови, валюта, локації"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Опція обирання бажаних мов"
 
@@ -1554,6 +1610,11 @@ msgstr "Дозволи (на доступ)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Системні налаштування"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1622,6 +1683,11 @@ msgstr "CiviГрант"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Статус гранту"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviЧленство"
 
@@ -1632,8 +1698,13 @@ msgstr "Усі звіти"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Допомога"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1642,18 +1713,43 @@ msgstr "Документація"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Форуми "
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Прийняти участь"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Про CiviCRM"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Розробникам"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "Оглядач API"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Документація для розробників"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1880,6 +1976,11 @@ msgstr "Надає інформацію щодо деталей грошових
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Надає інформацію щодо повторюваних внесків"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Підсумок по членству"
 
@@ -2049,144 +2150,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Деталізований звіт по агітаційній діяльності, телефон банкінгу, walk lists або інші опитування."
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Аудит діяльності справи"
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "Новий платіж"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Типи пільгових кредитів"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "Переглянути платіж"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Опції Стиля комунікацій"
+msgid "Configure CKEditor"
+msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Імпортувати індивідуальну інформацію з мульти-значеннями"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Змінити вибір реєстрації"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "Статус гранту"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "Розробникам"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "Оглядач API"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Документація для розробників"
+msgid "Insert CiviCRM Content"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Налаштування компонентів CiviВнески"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Рахунок - PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Рахунок - Е-мейл"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Переваги по даті"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Видалити файл"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Підтвердити дати"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Повторити Подію"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Відписатися"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Новий тест А/В"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Керування А/В тестами"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get expert help"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About CiviCRM"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Register your site"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Join CiviCRM"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Надає інформацію щодо повторюваних внесків"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
