po: update po/zh_CN/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/extension.po
+++ b/po/zh_CN/extension.po
@@ -28,8 +28,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -47,11 +47,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "你的扩展缓存目录 (%1) 不对 web 服务器可写。请转到<a href=\"%2\">路径设置页</a>改正。<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "不检查远程扩展 URL，因为 ext_repo_url 设置为 false。"
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -73,10 +68,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "CiviCRM 公共拓展目录上未记录和版本 %2 兼容的拓展（<a href=\"%1\">从这里请求的扩展</a>）。如果你想要安装未被标记为兼容的扩展，您可以<a href=\"%3\">手动下载和安装扩展</a>（需要访问您的 web 服务器）。<br/>"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "没有扩展可用于此版本"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -134,6 +125,13 @@ msgid ""
 msgstr "你不能够在这时安装扩展，因为您安装的 PHP 不支持 ZIP 归档。请询问您的系统管理员安装此标准 PHP-ZIP 扩展。"
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "警告: 下载器可能无法下载需要 HTTP 重定向的文件。PHP 的 open_basedir 或 safe_mode 的配置可能有问题。"
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "不能提取扩展：不当的目录结构"
 
@@ -177,9 +175,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "有一份拓展 (%1) 位于某系统文件夹 (%2) 中。系统文件夹的那份将被保留，但将使用新的那份。"
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "警告: 下载器可能无法下载需要 HTTP 重定向的文件。PHP 的 open_basedir 或 safe_mode 的配置可能有问题。"
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
