--- a/po/zh_CN/grant.po
+++ b/po/zh_CN/grant.po
@@ -28,9 +28,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-11-17 23:49+0000\n"
-"Last-Translator: Mingye Wang <arthur200126@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,14 +57,6 @@ msgstr "捐助到期日期为空"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "捐助决定日期为空"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "捐助类型 %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "捐助状态 %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -111,10 +103,6 @@ msgid "Grant report received"
 msgstr "捐助报告接收"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "捐助类型ID"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "捐助金额"
 
@@ -126,10 +114,6 @@ msgstr "捐助"
 msgid "Grant Rationale"
 msgstr "捐助缘由"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "捐助状态ID"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "捐助报告已接收？"
@@ -137,6 +121,10 @@ msgstr "捐助报告已接收？"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "要求金额<br/>（原始币种）"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "申请人"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -147,12 +135,9 @@ msgid "Delete Grants"
 msgstr "删除捐助"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "删除的捐助(s)：%1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "总共选定捐助(s)：%1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "已删除 %count 项捐助。"
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -163,30 +148,46 @@ msgid "Update Grants"
 msgstr "更新捐助"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "已更新捐助：%1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "更新捐助：%1（已选中 %2）"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "访问 CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr " 查看所有捐助"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "编辑捐助"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "创建和更新捐助"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "从 CiviGrant 中删除"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "删除捐助"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "捐助"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "捐助人"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "查看捐助"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "编辑捐助"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "确定删除此捐助吗？"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "删除捐助"
 
@@ -199,16 +200,8 @@ msgid "Granted"
 msgstr "已捐助"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "打印捐助"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "输出捐助"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "新捐助"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -229,6 +222,14 @@ msgstr "捐助资金转账日期"
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(原始币种)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "捐助状态"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "捐助类型"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -322,60 +323,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "本页列出自成立以来%1的全部捐助"
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "单击<a accesskey='N' href='%1'>添加捐助</a>，为该联系人登记一笔捐助。"
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "按 <a accesskey=\"N\" href='%1'>新捐助</a>为此联系人创建一笔捐助数据。"
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "该联系人尚未有任何获捐助记录"
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "申请人"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "更新捐助：%1（已选中 %2）"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "按 <a accesskey=\"N\" href='%1'>新捐助</a>为此联系人创建一笔捐助数据。"
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "已删除 %count 项捐助。"
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "访问 CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr " 查看所有捐助"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "编辑捐助"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "创建和更新捐助"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "从 CiviGrant 中删除"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "删除捐助"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "捐助状态"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "捐助类型"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
