po: update po/zh_CN/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/provinces.po
+++ b/po/zh_CN/provinces.po
@@ -28,8 +28,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -1899,8 +1899,8 @@ msgid "Burgas"
 msgstr "布尔加斯"
 
 msgctxt "province"
-msgid "Dobric"
-msgstr "多布里奇"
+msgid "Dobrich"
+msgstr ""
 
 msgctxt "province"
 msgid "Gabrovo"
@@ -1911,20 +1911,20 @@ msgid "Haskovo"
 msgstr "哈斯科沃"
 
 msgctxt "province"
-msgid "Jambol"
-msgstr "扬博尔"
+msgid "Yambol"
+msgstr ""
 
 msgctxt "province"
-msgid "Kardzali"
-msgstr "克尔贾利"
+msgid "Kardzhali"
+msgstr ""
 
 msgctxt "province"
-msgid "Kjstendil"
-msgstr "吉斯坦第尔"
+msgid "Kyustendil"
+msgstr ""
 
 msgctxt "province"
-msgid "Lovec"
-msgstr "罗维克"
+msgid "Lovech"
+msgstr ""
 
 msgctxt "province"
 msgid "Pazardzik"
@@ -1959,8 +1959,8 @@ msgid "Sliven"
 msgstr "斯利文"
 
 msgctxt "province"
-msgid "Smoljan"
-msgstr "斯莫梁"
+msgid "Smolyan"
+msgstr ""
 
 msgctxt "province"
 msgid "Sofia"
@@ -1971,12 +1971,12 @@ msgid "Stara Zagora"
 msgstr "旧扎戈拉"
 
 msgctxt "province"
-msgid "Sumen"
-msgstr "舒门"
+msgid "Shumen"
+msgstr ""
 
 msgctxt "province"
-msgid "Targoviste"
-msgstr "特尔戈维什特"
+msgid "Targovishte"
+msgstr ""
 
 msgctxt "province"
 msgid "Varna"
@@ -1991,8 +1991,8 @@ msgid "Vidin"
 msgstr "维丁"
 
 msgctxt "province"
-msgid "Vraca"
-msgstr "弗拉察"
+msgid "Vratsa"
+msgstr ""
 
 msgctxt "province"
 msgid "Al Hadd"
@@ -2855,8 +2855,8 @@ msgid "Maule"
 msgstr "马乌莱大区"
 
 msgctxt "province"
-msgid "Region Metropolitana de Santiago"
-msgstr "圣地亚哥首都大区"
+msgid "Santiago Metropolitan"
+msgstr ""
 
 msgctxt "province"
 msgid "Tarapaca"
@@ -6051,8 +6051,8 @@ msgid "Bali"
 msgstr "巴厘"
 
 msgctxt "province"
-msgid "Bangka Belitung"
-msgstr "邦加-勿里洞"
+msgid "Kepulauan Bangka Belitung"
+msgstr ""
 
 msgctxt "province"
 msgid "Banten"
@@ -6067,8 +6067,8 @@ msgid "Gorontalo"
 msgstr "哥伦打洛"
 
 msgctxt "province"
-msgid "Irian Jaya"
-msgstr "伊里安查亚"
+msgid "Papua Barat"
+msgstr ""
 
 msgctxt "province"
 msgid "Jambi"
@@ -6159,16 +6159,16 @@ msgid "Sumatera Utara"
 msgstr "北苏门答腊"
 
 msgctxt "province"
-msgid "Jakarta Raya"
-msgstr "雅加达"
+msgid "DKI Jakarta"
+msgstr ""
 
 msgctxt "province"
 msgid "Aceh"
 msgstr "亚齐"
 
 msgctxt "province"
-msgid "Yogyakarta"
-msgstr "日惹特区"
+msgid "DI Yogyakarta"
+msgstr ""
 
 msgctxt "province"
 msgid "Cork"
@@ -7927,20 +7927,20 @@ msgid "Jelgava"
 msgstr "叶尔加瓦"
 
 msgctxt "province"
-msgid "Jurmala"
-msgstr "尤尔马拉"
+msgid "Jūrmala"
+msgstr ""
 
 msgctxt "province"
-msgid "Liepaja"
-msgstr "利耶帕亚"
+msgid "Liepāja"
+msgstr ""
 
 msgctxt "province"
-msgid "Rezekne"
-msgstr "雷泽克内"
+msgid "Rēzekne"
+msgstr ""
 
 msgctxt "province"
-msgid "Riga"
-msgstr "里加"
+msgid "Rīga"
+msgstr ""
 
 msgctxt "province"
 msgid "Ventspils"
@@ -9247,8 +9247,8 @@ msgid "Zinder"
 msgstr "津德尔"
 
 msgctxt "province"
-msgid "Abuja Capital Territory"
-msgstr "阿布贾首都特区"
+msgid "Abuja Federal Capital Territory"
+msgstr ""
 
 msgctxt "province"
 msgid "Abia"
@@ -9635,8 +9635,8 @@ msgid "Tasman"
 msgstr "塔斯曼"
 
 msgctxt "province"
-msgid "waikato"
-msgstr "怀卡托"
+msgid "Waikato"
+msgstr ""
 
 msgctxt "province"
 msgid "Wellington"
@@ -10707,8 +10707,8 @@ msgid "Chelyabinskaya oblast'"
 msgstr "车里雅宾斯克州"
 
 msgctxt "province"
-msgid "Chitinskaya oblast'"
-msgstr "赤塔州"
+msgid "Zabaykalsky Krai'"
+msgstr ""
 
 msgctxt "province"
 msgid "Irkutskaya oblast'"
@@ -10727,8 +10727,8 @@ msgid "Kaluzhskaya oblast'"
 msgstr "卡卢加州"
 
 msgctxt "province"
-msgid "Kamchatskaya oblast'"
-msgstr "堪察加州"
+msgid "Kamchatka Krai'"
+msgstr ""
 
 msgctxt "province"
 msgid "Kemerovskaya oblast'"
@@ -10799,8 +10799,8 @@ msgid "Penzenskaya oblast'"
 msgstr "奔萨州"
 
 msgctxt "province"
-msgid "Permskaya oblast'"
-msgstr "彼尔姆州"
+msgid "Perm krai'"
+msgstr ""
 
 msgctxt "province"
 msgid "Pskovskaya oblast'"
@@ -10891,40 +10891,16 @@ msgid "Yevreyskaya avtonomnaya oblast'"
 msgstr "犹太自治州"
 
 msgctxt "province"
-msgid "Aginskiy Buryatskiy avtonomnyy"
-msgstr "阿加布里亚特自治区"
-
-msgctxt "province"
 msgid "Chukotskiy avtonomnyy okrug"
 msgstr "楚科奇自治区"
-
-msgctxt "province"
-msgid "Evenkiyskiy avtonomnyy okrug"
-msgstr "埃文基自治区"
 
 msgctxt "province"
 msgid "Khanty-Mansiyskiy avtonomnyy okrug"
 msgstr "汉特-曼西自治区"
 
 msgctxt "province"
-msgid "Komi-Permyatskiy avtonomnyy okrug"
-msgstr "科米彼尔米亚克民族自治区"
-
-msgctxt "province"
-msgid "Koryakskiy avtonomnyy okrug"
-msgstr "科里亚克自治区"
-
-msgctxt "province"
 msgid "Nenetskiy avtonomnyy okrug"
 msgstr "涅涅茨自治区"
-
-msgctxt "province"
-msgid "Taymyrskiy (Dolgano-Nenetskiy)"
-msgstr "泰梅尔(多尔干-涅涅茨)自治区"
-
-msgctxt "province"
-msgid "Ust'-Ordynskiy Buryatskiy"
-msgstr "乌斯季奥尔登斯基布里亚特自治州"
 
 msgctxt "province"
 msgid "Yamalo-Nenetskiy avtonomnyy okrug"
@@ -11251,8 +11227,8 @@ msgid "Tristan da Cunha"
 msgstr "特里斯坦-达库尼亚群岛"
 
 msgctxt "province"
-msgid "Ajdovscina"
-msgstr "阿伊多夫什契纳"
+msgid "Ajdovščina"
+msgstr ""
 
 msgctxt "province"
 msgid "Beltinci"
@@ -11287,8 +11263,8 @@ msgid "Bovec"
 msgstr "博韦茨"
 
 msgctxt "province"
-msgid "Braslovce"
-msgstr "布拉斯洛夫采"
+msgid "Braslovče"
+msgstr ""
 
 msgctxt "province"
 msgid "Brda"
@@ -11299,8 +11275,8 @@ msgid "Brezovica"
 msgstr "布罗佐维察"
 
 msgctxt "province"
-msgid "Brezica"
-msgstr "布雷日采"
+msgid "Brežice"
+msgstr ""
 
 msgctxt "province"
 msgid "Cankova"
@@ -11327,24 +11303,24 @@ msgid "Cerkvenjak"
 msgstr "采尔克芬尼亚克"
 
 msgctxt "province"
-msgid "Crensovci"
-msgstr "奇伦绍夫奇"
+msgid "Črenšovci"
+msgstr ""
 
 msgctxt "province"
-msgid "Crna na Koroskem"
-msgstr "科罗什卡地区奇尔纳"
+msgid "Črna na Koroškem"
+msgstr ""
 
 msgctxt "province"
-msgid "Crnomelj"
-msgstr "奇尔诺梅利"
+msgid "Črnomelj"
+msgstr ""
 
 msgctxt "province"
 msgid "Destrnik"
 msgstr "代斯特尔尼克-特尔诺夫斯克村"
 
 msgctxt "province"
-msgid "Divaca"
-msgstr "迪瓦查"
+msgid "Divača"
+msgstr ""
 
 msgctxt "province"
 msgid "Dobje"
@@ -11375,8 +11351,8 @@ msgid "Dolenjske Toplice"
 msgstr "多莱尼斯科托普利采"
 
 msgctxt "province"
-msgid "Domzale"
-msgstr "多姆扎莱"
+msgid "Domžale"
+msgstr ""
 
 msgctxt "province"
 msgid "Dornava"
@@ -11395,8 +11371,8 @@ msgid "Gorenja vas-Poljane"
 msgstr "戈雷尼亚村-波利亚内"
 
 msgctxt "province"
-msgid "Gorsnica"
-msgstr "戈里什尼察"
+msgid "Gorišnica"
+msgstr ""
 
 msgctxt "province"
 msgid "Gornja Radgona"
@@ -11423,16 +11399,16 @@ msgid "Hajdina"
 msgstr "哈伊蒂纳"
 
 msgctxt "province"
-msgid "Hoce-Slivnica"
-msgstr "霍策-什里夫尼察"
+msgid "Hoče-Slivnica"
+msgstr ""
 
 msgctxt "province"
-msgid "Hodos"
-msgstr "霍多什沙洛夫奇"
+msgid "Hodoš"
+msgstr ""
 
 msgctxt "province"
-msgid "Jorjul"
-msgstr "Jorjul"
+msgid "Horjul"
+msgstr ""
 
 msgctxt "province"
 msgid "Hrastnik"
@@ -11451,12 +11427,12 @@ msgid "Ig"
 msgstr "伊格"
 
 msgctxt "province"
-msgid "IIrska Bistrica"
-msgstr "伊尔斯卡 比斯特里察"
+msgid "Ilirska Bistrica"
+msgstr ""
 
 msgctxt "province"
-msgid "Ivancna Gorica"
-msgstr "伊万奇纳戈里察"
+msgid "Ivančna Gorica"
+msgstr ""
 
 msgctxt "province"
 msgid "Izola"
@@ -11471,8 +11447,8 @@ msgid "Jezersko"
 msgstr "耶则尔斯科"
 
 msgctxt "province"
-msgid "Jursinci"
-msgstr "尤尔欣齐"
+msgid "Juršinci"
+msgstr ""
 
 msgctxt "province"
 msgid "Kamnik"
@@ -11483,8 +11459,8 @@ msgid "Kanal"
 msgstr "卡纳尔"
 
 msgctxt "province"
-msgid "Kidricevo"
-msgstr "基德里切沃"
+msgid "Kidričevo"
+msgstr ""
 
 msgctxt "province"
 msgid "Kobarid"
@@ -11495,8 +11471,8 @@ msgid "Kobilje"
 msgstr "科比列"
 
 msgctxt "province"
-msgid "Jovevje"
-msgstr "Jovevje"
+msgid "Kočevje"
+msgstr ""
 
 msgctxt "province"
 msgid "Komen"
@@ -11527,12 +11503,12 @@ msgid "Kranjska Gora"
 msgstr "克拉尼斯卡戈拉"
 
 msgctxt "province"
-msgid "Krizevci"
-msgstr "克里兹夫奇"
+msgid "Križevci"
+msgstr ""
 
 msgctxt "province"
-msgid "Krsko"
-msgstr "克尔什科"
+msgid "Krško"
+msgstr ""
 
 msgctxt "province"
 msgid "Kungota"
@@ -11543,8 +11519,8 @@ msgid "Kuzma"
 msgstr "库兹马"
 
 msgctxt "province"
-msgid "Lasko"
-msgstr "拉什科"
+msgid "Laško"
+msgstr ""
 
 msgctxt "province"
 msgid "Lenart"
@@ -11575,28 +11551,28 @@ msgid "Logatec"
 msgstr "洛加泰茨"
 
 msgctxt "province"
-msgid "Loska dolina"
-msgstr "洛什卡多利纳"
+msgid "Loška dolina"
+msgstr ""
 
 msgctxt "province"
-msgid "Loski Potok"
-msgstr "洛什基波托克"
+msgid "Loški Potok"
+msgstr ""
 
 msgctxt "province"
 msgid "Lovrenc na Pohorju"
 msgstr "波霍里尤地区洛夫伦茨"
 
 msgctxt "province"
-msgid "Luce"
-msgstr "卢切"
+msgid "Luče"
+msgstr ""
 
 msgctxt "province"
 msgid "Lukovica"
 msgstr "卢科维察"
 
 msgctxt "province"
-msgid "Majsperk"
-msgstr "马伊什佩克"
+msgid "Majšperk"
+msgstr ""
 
 msgctxt "province"
 msgid "Maribor"
@@ -11611,36 +11587,36 @@ msgid "Medvode"
 msgstr "梅德沃代"
 
 msgctxt "province"
-msgid "Menges"
-msgstr "门盖什"
+msgid "Mengeš"
+msgstr ""
 
 msgctxt "province"
 msgid "Metlika"
 msgstr "梅特利卡"
 
 msgctxt "province"
-msgid "Mezica"
-msgstr "梅日察"
+msgid "Mežica"
+msgstr ""
 
 msgctxt "province"
-msgid "Miklavz na Dravskern polju"
-msgstr "德拉夫斯肯波尔尤地区米克拉夫兹"
+msgid "Miklavž na Dravskem polju"
+msgstr ""
 
 msgctxt "province"
 msgid "Miren-Kostanjevica"
 msgstr "米伦-科斯塔涅维察"
 
 msgctxt "province"
-msgid "Mirna Pec"
-msgstr "米尔纳比茨"
+msgid "Mirna Peč"
+msgstr ""
 
 msgctxt "province"
 msgid "Mislinja"
 msgstr "米斯利尼亚"
 
 msgctxt "province"
-msgid "Moravce"
-msgstr "摩拉夫切"
+msgid "Moravče"
+msgstr ""
 
 msgctxt "province"
 msgid "Moravske Toplice"
@@ -11671,92 +11647,92 @@ msgid "Nova Gorica"
 msgstr "新戈里察"
 
 msgctxt "province"
-msgid "Nova mesto"
-msgstr "新梅斯托"
+msgid "Novo mesto"
+msgstr ""
 
 msgctxt "province"
 msgid "Sveta Ana"
 msgstr "斯维塔 阿纳"
 
 msgctxt "province"
-msgid "Sveti Andraz v Slovenskih goricah"
-msgstr "斯维提 安德拉  斯洛文斯基 戈里察"
+msgid "Sveti Andraž v Slovenskih goricah"
+msgstr ""
 
 msgctxt "province"
 msgid "Sveti Jurij"
 msgstr "圣尤里"
 
 msgctxt "province"
-msgid "Salovci"
-msgstr "沙洛夫齐"
+msgid "Šalovci"
+msgstr ""
 
 msgctxt "province"
-msgid "Sempeter-Vrtojba"
-msgstr "赛姆比特-费尔托伊巴"
+msgid "Šempeter-Vrtojba"
+msgstr ""
 
 msgctxt "province"
-msgid "Sencur"
-msgstr "申丘尔"
+msgid "Šenčur"
+msgstr ""
 
 msgctxt "province"
-msgid "Sentilj"
-msgstr "申蒂利"
+msgid "Šentilj"
+msgstr ""
 
 msgctxt "province"
-msgid "Sentjernej"
-msgstr "申特耶尔内伊"
+msgid "Šentjernej"
+msgstr ""
 
 msgctxt "province"
-msgid "Sentjur pri Celju"
-msgstr "采列附近申特尤尔"
+msgid "Šentjur"
+msgstr ""
 
 msgctxt "province"
-msgid "Skocjan"
-msgstr "什科茨杨"
+msgid "Škocjan"
+msgstr ""
 
 msgctxt "province"
-msgid "Skofja Loka"
-msgstr "什科菲亚洛卡"
+msgid "Škofja Loka"
+msgstr ""
 
 msgctxt "province"
-msgid "Skoftjica"
-msgstr "什科夫利察"
+msgid "Škofljica"
+msgstr ""
 
 msgctxt "province"
-msgid "Smarje pri Jelsah"
-msgstr "耶尔沙赫附近什马列"
+msgid "Šmarje pri Jelšah"
+msgstr ""
 
 msgctxt "province"
-msgid "Smartno ob Paki"
-msgstr "帕卡河畔什马尔特诺"
+msgid "Šmartno ob Paki"
+msgstr ""
 
 msgctxt "province"
-msgid "Smartno pri Litiji"
-msgstr "利蒂基附近什马尔特诺"
+msgid "Šmartno pri Litiji"
+msgstr ""
 
 msgctxt "province"
-msgid "Sostanj"
-msgstr "绍什塔尼"
+msgid "Šoštanj"
+msgstr ""
 
 msgctxt "province"
-msgid "Store"
-msgstr "什托雷"
+msgid "Štore"
+msgstr ""
 
 msgctxt "province"
 msgid "Tabor"
 msgstr "塔波尔"
 
 msgctxt "province"
-msgid "Tisina"
-msgstr "蒂希纳"
+msgid "Tišina"
+msgstr ""
 
 msgctxt "province"
 msgid "Tolmin"
 msgstr "托尔明"
 
 msgctxt "province"
-msgid "Trbovje"
-msgstr "特尔波维耶"
+msgid "Trbovlje"
+msgstr ""
 
 msgctxt "province"
 msgid "Trebnje"
@@ -11767,16 +11743,16 @@ msgid "Trnovska vas"
 msgstr "特尔诺夫斯克村"
 
 msgctxt "province"
-msgid "Trzic"
-msgstr "特尔日奇"
+msgid "Tržič"
+msgstr ""
 
 msgctxt "province"
 msgid "Trzin"
 msgstr "特尔兹恩"
 
 msgctxt "province"
-msgid "Turnisce"
-msgstr "图尔尼什切"
+msgid "Turnišče"
+msgstr ""
 
 msgctxt "province"
 msgid "Velenje"
@@ -11787,12 +11763,12 @@ msgid "Velika Polana"
 msgstr "维里卡波兰纳"
 
 msgctxt "province"
-msgid "Velika Lasce"
-msgstr "大拉什切"
+msgid "Velike Lašče"
+msgstr ""
 
 msgctxt "province"
-msgid "Verzej"
-msgstr "维尔泽伊"
+msgid "Veržej"
+msgstr ""
 
 msgctxt "province"
 msgid "Videm"
@@ -11827,36 +11803,36 @@ msgid "Zagorje ob Savi"
 msgstr "萨瓦河畔扎列格"
 
 msgctxt "province"
-msgid "Zavrc"
-msgstr "扎夫尔奇"
+msgid "Zavrč"
+msgstr ""
 
 msgctxt "province"
-msgid "Zrece"
-msgstr "兹雷切"
+msgid "Zreče"
+msgstr ""
 
 msgctxt "province"
-msgid "Zalec"
-msgstr "扎列奇"
+msgid "Žalec"
+msgstr ""
 
 msgctxt "province"
-msgid "Zelezniki"
-msgstr "热莱兹尼基"
+msgid "Železniki"
+msgstr ""
 
 msgctxt "province"
-msgid "Zetale"
-msgstr "热塔莱"
+msgid "Žetale"
+msgstr ""
 
 msgctxt "province"
-msgid "Ziri"
-msgstr "日里"
+msgid "Žiri"
+msgstr ""
 
 msgctxt "province"
-msgid "Zirovnica"
-msgstr "兹罗夫尼察"
+msgid "Žirovnica"
+msgstr ""
 
 msgctxt "province"
-msgid "Zuzemberk"
-msgstr "祖泽姆波克"
+msgid "Žužemberk"
+msgstr ""
 
 msgctxt "province"
 msgid "Banskobystrický kraj"
@@ -15283,339 +15259,11 @@ msgid "Valmiera"
 msgstr ""
 
 msgctxt "province"
-msgid "Santiago Metropolitan"
-msgstr ""
-
-msgctxt "province"
-msgid "Abuja Federal Capital Territory"
-msgstr ""
-
-msgctxt "province"
-msgid "Waikato"
-msgstr ""
-
-msgctxt "province"
-msgid "Zabaykalsky Krai'"
-msgstr ""
-
-msgctxt "province"
-msgid "Kamchatka Krai'"
-msgstr ""
-
-msgctxt "province"
-msgid "Perm krai'"
-msgstr ""
-
-msgctxt "province"
 msgid "Pieria"
 msgstr ""
 
 msgctxt "province"
 msgid "Arica y Parinacota"
-msgstr ""
-
-msgctxt "province"
-msgid "Dobrich"
-msgstr ""
-
-msgctxt "province"
-msgid "Yambol"
-msgstr ""
-
-msgctxt "province"
-msgid "Kardzhali"
-msgstr ""
-
-msgctxt "province"
-msgid "Kyustendil"
-msgstr ""
-
-msgctxt "province"
-msgid "Lovech"
-msgstr ""
-
-msgctxt "province"
-msgid "Smolyan"
-msgstr ""
-
-msgctxt "province"
-msgid "Shumen"
-msgstr ""
-
-msgctxt "province"
-msgid "Targovishte"
-msgstr ""
-
-msgctxt "province"
-msgid "Vratsa"
-msgstr ""
-
-msgctxt "province"
-msgid "Kepulauan Bangka Belitung"
-msgstr ""
-
-msgctxt "province"
-msgid "Papua Barat"
-msgstr ""
-
-msgctxt "province"
-msgid "DKI Jakarta"
-msgstr ""
-
-msgctxt "province"
-msgid "DI Yogyakarta"
-msgstr ""
-
-msgctxt "province"
-msgid "Jūrmala"
-msgstr ""
-
-msgctxt "province"
-msgid "Liepāja"
-msgstr ""
-
-msgctxt "province"
-msgid "Rēzekne"
-msgstr ""
-
-msgctxt "province"
-msgid "Rīga"
-msgstr ""
-
-msgctxt "province"
-msgid "Ajdovščina"
-msgstr ""
-
-msgctxt "province"
-msgid "Braslovče"
-msgstr ""
-
-msgctxt "province"
-msgid "Brežice"
-msgstr ""
-
-msgctxt "province"
-msgid "Črenšovci"
-msgstr ""
-
-msgctxt "province"
-msgid "Črna na Koroškem"
-msgstr ""
-
-msgctxt "province"
-msgid "Črnomelj"
-msgstr ""
-
-msgctxt "province"
-msgid "Divača"
-msgstr ""
-
-msgctxt "province"
-msgid "Domžale"
-msgstr ""
-
-msgctxt "province"
-msgid "Gorišnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Hoče-Slivnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Hodoš"
-msgstr ""
-
-msgctxt "province"
-msgid "Horjul"
-msgstr ""
-
-msgctxt "province"
-msgid "Ilirska Bistrica"
-msgstr ""
-
-msgctxt "province"
-msgid "Ivančna Gorica"
-msgstr ""
-
-msgctxt "province"
-msgid "Juršinci"
-msgstr ""
-
-msgctxt "province"
-msgid "Kidričevo"
-msgstr ""
-
-msgctxt "province"
-msgid "Kočevje"
-msgstr ""
-
-msgctxt "province"
-msgid "Križevci"
-msgstr ""
-
-msgctxt "province"
-msgid "Krško"
-msgstr ""
-
-msgctxt "province"
-msgid "Laško"
-msgstr ""
-
-msgctxt "province"
-msgid "Loška dolina"
-msgstr ""
-
-msgctxt "province"
-msgid "Loški Potok"
-msgstr ""
-
-msgctxt "province"
-msgid "Luče"
-msgstr ""
-
-msgctxt "province"
-msgid "Majšperk"
-msgstr ""
-
-msgctxt "province"
-msgid "Mengeš"
-msgstr ""
-
-msgctxt "province"
-msgid "Mežica"
-msgstr ""
-
-msgctxt "province"
-msgid "Miklavž na Dravskem polju"
-msgstr ""
-
-msgctxt "province"
-msgid "Mirna Peč"
-msgstr ""
-
-msgctxt "province"
-msgid "Moravče"
-msgstr ""
-
-msgctxt "province"
-msgid "Novo mesto"
-msgstr ""
-
-msgctxt "province"
-msgid "Sveti Andraž v Slovenskih goricah"
-msgstr ""
-
-msgctxt "province"
-msgid "Šalovci"
-msgstr ""
-
-msgctxt "province"
-msgid "Šempeter-Vrtojba"
-msgstr ""
-
-msgctxt "province"
-msgid "Šenčur"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentilj"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentjernej"
-msgstr ""
-
-msgctxt "province"
-msgid "Šentjur"
-msgstr ""
-
-msgctxt "province"
-msgid "Škocjan"
-msgstr ""
-
-msgctxt "province"
-msgid "Škofja Loka"
-msgstr ""
-
-msgctxt "province"
-msgid "Škofljica"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmarje pri Jelšah"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmartno ob Paki"
-msgstr ""
-
-msgctxt "province"
-msgid "Šmartno pri Litiji"
-msgstr ""
-
-msgctxt "province"
-msgid "Šoštanj"
-msgstr ""
-
-msgctxt "province"
-msgid "Štore"
-msgstr ""
-
-msgctxt "province"
-msgid "Tišina"
-msgstr ""
-
-msgctxt "province"
-msgid "Trbovlje"
-msgstr ""
-
-msgctxt "province"
-msgid "Tržič"
-msgstr ""
-
-msgctxt "province"
-msgid "Turnišče"
-msgstr ""
-
-msgctxt "province"
-msgid "Velike Lašče"
-msgstr ""
-
-msgctxt "province"
-msgid "Veržej"
-msgstr ""
-
-msgctxt "province"
-msgid "Zavrč"
-msgstr ""
-
-msgctxt "province"
-msgid "Zreče"
-msgstr ""
-
-msgctxt "province"
-msgid "Žalec"
-msgstr ""
-
-msgctxt "province"
-msgid "Železniki"
-msgstr ""
-
-msgctxt "province"
-msgid "Žetale"
-msgstr ""
-
-msgctxt "province"
-msgid "Žiri"
-msgstr ""
-
-msgctxt "province"
-msgid "Žirovnica"
-msgstr ""
-
-msgctxt "province"
-msgid "Žužemberk"
 msgstr ""
 
 msgctxt "province"
@@ -15916,4 +15564,192 @@ msgstr ""
 
 msgctxt "province"
 msgid "Shida Kartli"
+msgstr ""
+
+msgctxt "province"
+msgid "Harjumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Hiiumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Ida-Virumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Jõgevamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Järvamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Läänemaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Lääne-Virumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Põlvamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Pärnumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Raplamaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Saaremaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Tartumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Viljandimaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Võrumaa"
+msgstr ""
+
+msgctxt "province"
+msgid "Klaipėdos Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Marijampolės Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Panevėžio Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Šiaulių Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Tauragės Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Telšių Apskritis"
+msgstr ""
+
+msgctxt "province"
+msgid "Bataan"
+msgstr ""
+
+msgctxt "province"
+msgid "Al Bahah"
+msgstr ""
+
+msgctxt "province"
+msgid "Al Hudud Ash Shamaliyah"
+msgstr ""
+
+msgctxt "province"
+msgid "Blekinge län"
+msgstr ""
+
+msgctxt "province"
+msgid "Dalarnas län"
+msgstr ""
+
+msgctxt "province"
+msgid "Gotlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Gävleborgs län"
+msgstr ""
+
+msgctxt "province"
+msgid "Hallands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Jämtlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Jönkopings län"
+msgstr ""
+
+msgctxt "province"
+msgid "Kalmar län"
+msgstr ""
+
+msgctxt "province"
+msgid "Kronobergs län"
+msgstr ""
+
+msgctxt "province"
+msgid "Norrbottens län"
+msgstr ""
+
+msgctxt "province"
+msgid "Skåne län"
+msgstr ""
+
+msgctxt "province"
+msgid "Stockholms län"
+msgstr ""
+
+msgctxt "province"
+msgid "Södermanlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Uppsala län"
+msgstr ""
+
+msgctxt "province"
+msgid "Värmlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västerbottens län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västernorrlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västmanlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Västra Götalands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Örebro län"
+msgstr ""
+
+msgctxt "province"
+msgid "Östergötlands län"
+msgstr ""
+
+msgctxt "province"
+msgid "Phuket"
+msgstr ""
+
+msgctxt "province"
+msgid "Northern Ostrobothnia"
+msgstr ""
+
+msgctxt "province"
+msgid "Telangana"
 msgstr ""
