--- a/po/zh_CN/menu.po
+++ b/po/zh_CN/menu.po
@@ -31,8 +31,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -150,8 +150,8 @@ msgid "Case Activity"
 msgstr "个案活动"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "个案报告"
+msgid "Case Activity Audit"
+msgstr "个案活动审计"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -170,8 +170,8 @@ msgid "Assign to Another Client"
 msgstr "分配给其他客户"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "为个案创建活动"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -195,10 +195,6 @@ msgstr "个案状态"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "遇到媒体"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "更改活动状态"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -273,6 +269,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "财务类型"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "新的支付"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -290,9 +290,15 @@ msgstr "被接受的信用卡"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "软信用类型"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "捐赠"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "定期捐赠"
@@ -343,6 +349,23 @@ msgstr "批处理账目"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "导出账目处理"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "查看付款"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "CiviContribute 组件设置"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "PDF 发票"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Email 发票"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -496,6 +519,11 @@ msgstr "搜索偏好设置"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "日期偏好设置"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "导航菜单"
 
@@ -529,10 +557,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "预定提醒"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "不可让别人看到这个信息"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -550,6 +574,11 @@ msgstr "打印页(PDF)格式"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "通信类型选项"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Email问候格式"
 
@@ -563,9 +592,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "地址格式"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "语言，货币，所在地"
+msgid "Languages, Currency, Locations"
+msgstr "语言，货币，地点"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -716,10 +746,6 @@ msgid "Administer CiviCRM"
 msgstr "管理 CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "选项值"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "价格设定"
 
@@ -787,10 +813,6 @@ msgstr "搜索生成器"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "自定义搜索"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "简单搜索"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -882,6 +904,10 @@ msgid "CiviCRM Blog"
 msgstr "Civil博客"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "个案面板元件"
 
@@ -936,6 +962,10 @@ msgid "Import Activities"
 msgstr "导入活动"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "导入多值自定义数据"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "升级CiviCRM"
 
@@ -972,12 +1002,16 @@ msgid "Browse Uploaded files"
 msgstr "浏览上传文件"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "删除文件"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "退出"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -991,6 +1025,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "资料编辑器"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "确定日期"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1087,6 +1125,10 @@ msgid "Event Online Registration"
 msgstr "事件在线登记"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "重复事件"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "会议席位"
 
@@ -1120,6 +1162,10 @@ msgstr "从购物车中移除"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "查看购物车"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "更改注册选择"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1174,8 +1220,8 @@ msgid "Resubscribe"
 msgstr "重新订阅"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "退订"
+msgid "Opt-out"
+msgstr "选择退出"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1310,6 +1356,11 @@ msgstr "报告列表"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "CiviCRM新闻"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1448,6 +1499,16 @@ msgstr "查找批量短消息"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "新建 A/B 测试"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "管理 A/B 测试"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "会员报告"
 
@@ -1553,11 +1614,6 @@ msgstr "本地化"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "语言，货币，地点"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "首选语言选项"
 
@@ -1575,6 +1631,11 @@ msgstr "许可(访问控制)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "系统设置"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1643,6 +1704,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "拨款状态"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1653,8 +1719,13 @@ msgstr "所有报告"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "帮助"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1663,18 +1734,43 @@ msgstr "文档"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "社区论坛"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "参加者"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "关于"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "开发者"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API浏览器"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "开发者文档"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1901,6 +1997,11 @@ msgstr "提供捐赠和支付的事项详情，包括事项编号、发票编号
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "提供关于定期捐赠的信息"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "会籍一览"
 
@@ -2070,144 +2171,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "列出游说拉票、电话银行、行动名单或其它调查的详尽报告"
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "个案活动审计"
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "新的支付"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "软信用类型"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "查看付款"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "通信类型选项"
+msgid "Configure CKEditor"
+msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "导入多值自定义数据"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "更改注册选择"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "拨款状态"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "开发者"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "API浏览器"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "开发者文档"
+msgid "Insert CiviCRM Content"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "CiviContribute 组件设置"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "PDF 发票"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Email 发票"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "日期偏好设置"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "删除文件"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "确定日期"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "重复事件"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "选择退出"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "新建 A/B 测试"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "管理 A/B 测试"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get expert help"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About CiviCRM"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Register your site"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Join CiviCRM"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "提供关于定期捐赠的信息"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
