--- a/po/zh_TW/grant.po
+++ b/po/zh_TW/grant.po
@@ -9,10 +9,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-04-25 21:37+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/civicrm/language/zh_TW/)\n"
+"Language-Team: Chinese (Taiwan) (http://www.transifex.com/civicrm/civicrm/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,14 +38,6 @@ msgstr "補助有限日期"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "補助決定日期 - 從"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "補助類別 %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "補助狀態 %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -92,10 +84,6 @@ msgid "Grant report received"
 msgstr "已收到補助報表"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "補助類型"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "已撥款總額"
 
@@ -107,10 +95,6 @@ msgstr "贊助貨幣"
 msgid "Grant Rationale"
 msgstr "贊助原由"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "補助狀態"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "是否收到補助報表？"
@@ -118,6 +102,10 @@ msgstr "是否收到補助報表？"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "所需金額<br/>(原本貨幣)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "申請人"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -128,12 +116,9 @@ msgid "Delete Grants"
 msgstr "刪除補助"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "已刪除補助： %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "總選取補助： %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] ""
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -144,30 +129,46 @@ msgid "Update Grants"
 msgstr "更新補助"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "已更新贊助： %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "更新補助: %1(全部入選者: %2 )"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr ""
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr ""
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr ""
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr ""
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr ""
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr ""
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "補助"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "由贊助"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "瀏覽補助"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "編輯補助"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "您是否確定刪除這項補助？"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "刪除補助"
 
@@ -180,16 +181,8 @@ msgid "Granted"
 msgstr "已補助"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "列印補助清單"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "匯出補助資料"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "新增補助"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -210,6 +203,14 @@ msgstr "撥款金額匯款日期。"
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "（原本貨幣）"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "補助狀態"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "補助類型"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -303,60 +304,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "本頁面列出所有%1的撥款記錄。"
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "按 <a accesskey=\"N\" href='%1'>新撥款</a>為此聯絡人建立一筆撥款資料。"
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "按 <a accesskey=\"N\" href='%1'>新贊助</a>為此聯絡人建立一筆撥款資料。"
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "此聯絡人沒有撥款紀錄。"
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "申請人"
-
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "更新補助: %1(全部入選者: %2 )"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "按 <a accesskey=\"N\" href='%1'>新贊助</a>為此聯絡人建立一筆撥款資料。"
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] ""
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
+#: CRM/Grant/Task.php
+msgid "Export grants"
 msgstr ""
 
-#: CRM/Grant/Info.php
-msgid "View all grants"
+#: CRM/Grant/Task.php
+msgid "Update grants"
 msgstr ""
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr ""
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr ""
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr ""
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr ""
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "補助狀態"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "補助類型"
