po: update po/zh_TW/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_TW/install.po
+++ b/po/zh_TW/install.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Samson LAU <nosmas@gmail.com>, 2016
 # 洪嘉鴻 <jerry9030@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-08-07 12:16+0000\n"
-"Last-Translator: 洪嘉鴻 <jerry9030@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-16 06:42+0000\n"
+"Last-Translator: Samson LAU <nosmas@gmail.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/civicrm/civicrm/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,25 +20,25 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "噢！ 請修正你的安裝位置"
 
 #: install/index.php
 msgid ""
 "Please untar (uncompress) your downloaded copy of CiviCRM in the "
 "<strong>%1</strong> directory below your Drupal root directory."
-msgstr ""
+msgstr "請 untar (解壓縮) 你已經下載的 CiviCRM 檔案到 <strong>%1</strong> 到 Drupal 根目錄裡的目錄"
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "噢！ CiviCRM 已安裝"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[你的 Drupal 根目錄]"
 
 #: install/index.php
 msgid "Installation Guide"
-msgstr ""
+msgstr "安裝指引"
 
 #: install/index.php
 msgid ""
@@ -46,11 +47,11 @@ msgid ""
 "<strong>civicrm.settings.php</strong> - from <strong>%1</strong>.</li><li>To"
 " <strong>upgrade an existing installation</strong>, <a href='%2'>refer to "
 "the online documentation</a>.</li></ul>"
-msgstr ""
+msgstr "CiviCRM 已完成安裝 <ul><li>要 <strong>開始</strong> 的話，你必須把現有的 CiviCRM 設定檔刪除或更名 - <strong>civicrm.settings.php</strong> - 自 <strong>%1</strong>.</li><li>要 <strong>升級現有的安裝</strong>, <a href='%2'>參考線上文件</a>。</li></ul>"
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "噢！ CiviCRM 的版本不正確"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
@@ -58,7 +59,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "噢！ Drupal 的版本不正確"
 
 #: install/index.php
 msgid ""
@@ -88,7 +89,7 @@ msgstr "MySQL %1 組態"
 
 #: install/index.php
 msgid "Does the server exist?"
-msgstr ""
+msgstr "伺服器存在嗎?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
@@ -96,23 +97,23 @@ msgstr ""
 
 #: install/index.php
 msgid "Are the access credentials correct?"
-msgstr ""
+msgstr "登入名稱和密碼正確嗎？"
 
 #: install/index.php
 msgid "That username/password doesn't work"
-msgstr ""
+msgstr "使用者名稱/密碼無效"
 
 #: install/index.php
 msgid "MySQL version at least %1"
-msgstr ""
+msgstr "MySQL 版本最少為 %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "MySQL 版本最少為 %1，你正使用 MySQL %2"
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
@@ -123,6 +124,16 @@ msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
 msgstr ""
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr "資料庫名稱有效？"
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
+msgstr "資料庫名稱無效。請使用 0-9, a-z, A-Z 及 _ 等字符作為名稱"
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
